app/src/main/java/com/example/basearchitecture/data/models/error/ICommonError.kt
package com.example.basearchitecture.data.models.error

/**
 * ICommonError
 */
interface ICommonError